# band-topology

./: README.md  model.py  pyproject.toml
examples/: ab_caging.py  haldane.py  hypercubic.py  kagome.py  kane_mele.py  lieb.py  lieb_kagome.py  rice_mele.py  thouless_pump.py  wilson.py
src/band_topology/: topology.py
src/band_topology/meshes/: kspace.py
src/band_topology/models/: tightbinding.py
